--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.11.0
 blinker==1.9.0
 click==8.3.0
 colorama==0.4.6
+dicttoxml==1.7.16
 Django==6.0
 Flask==3.1.0
 Flask-MySQLdb==2.0.0
@@ -10,6 +11,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==2.1.3
 mysqlclient==2.2.7
+PyJWT==2.10.1
 sqlparse==0.5.4
 tzdata==2025.3
 Werkzeug==3.1.3
